2009-09-02  Sancho Lerena <slerena@artica.es>

	* attachment/plugin: New directory to place console uploaded server
	plugins (from the new extension).
	
	* extensions/plugin_registration.php: New extension to upload and register
	using a new format of packaged plugins (.pspz) files who register 
	automatically the plugin and add network components defined to use that 
	plugin. .pspz format are defined in our wiki at 
	http://openideas.info/wiki/index.php?title=Pandora_3.0:New_options_in_development_version

	* include/styles/pandora.css: Adjusted notify text format.

2009-09-02  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_alert_macros.php,
	  include/help/es/help_alert_macros.php: Added to repository. Alert
	  macro help files.

	* godmode/alerts/configure_alert_template.php: Show alert macro help.

2009-09-01  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Updated version, added two new module groups and 
	some cleanup.
	
	* pandoradb.sql: Added cascade_protection field in tagente and removed 
	old server information from 2.x scheme.
	
	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Added new fields (trecon_task 
	and tagente) and drop old server information from tagente table.
	
	* configurar_agente.php, agent_manager.php: Added cascade protection 
	GUI checkbox and logic.
	
	* images/help: Added graph directory for help.
	
	* help/en/cascade_protection.php: Added help topic.

2009-08-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_menu.php: add lines of code that I forget in the
	previus commits. Now the menu show correctly the extensions.

2009-08-01  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add external Module group "Not assigned"
	because there are modules with this module group as agent software.
	* extensions/module_groups.php: fix bug that the count are very wrong. And
	add the link to Full list of monitors with filter.

2009-08-30  Raul Mateos  <raulofpandora@gmail.com>
